SPARK-App/src/pages/flashcardList/FlashcardList.css
.card-grid {
    display: grid;
    align-items: center;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    gap: 1.5rem;
}

.pageTop {
    display: flex;
    justify-content: space-between;
}

.dropdownContainerDiv {
    display: flex;
    justify-content: flex-end;
    margin: 0px 0 40px;
}

.dropdown {
    margin-right: 20px;
}

